--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,7 @@ author:
   location         : "https://www.google.com/maps/dir/33.9945954,-81.0320225/aiisc/@33.9950302,-81.0344177,17z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x88f8bb336cf288a3:0x20e0315b3133bf1d!2m2!1d-81.0319499!2d33.9946829"
   image            : "team.jpg"
   image_2          : "group_pic.jpg"
+  image_3          : "team_2023_spring.jpg"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   #googlescholar    : "http://yourfullgooglescholarurl.com"
