Add Summer 2023 team lunch

--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,8 @@ author:
   image            : "team.jpg"
   image_2          : "group_pic.jpg"
   image_3          : "team_2023_spring.jpg"
+  image_4          : "team_lunch_summer2023.jpg"
+
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   #googlescholar    : "http://yourfullgooglescholarurl.com"
